# blur_detection_using_wavelet_transform

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  requirements.txt
.github/workflows/: blur_detection_w_haar_transforms.yml  build.yml  build_test.yml  build_test_debug.yml  build_test_release.yml  cmake-single-platform.yml  test.yml
include/blur_detection/: blur_detection.h  blur_detection.hpp
src/: main.cpp
test/: CMakeLists.txt  test_blur_detection.cpp
